--- a/_posts/2021-10-22-加一.md
+++ b/_posts/2021-10-22-加一.md
@@ -14,7 +14,7 @@ title: "加一"
 ```c
 int* plusOne(int* digits, int digitsSize, int* returnSize)
 {
-    int* p = calloc(digitsSize + 1, sizeof(int));
+    int* p = (int*)calloc(digitsSize + 1, sizeof(int));
     int flag = 0;
     *returnSize = digitsSize;
     for (int i = 0; i < digitsSize;i++ )
