--- a/_posts/2021-10-20-只出现一次的数字.md
+++ b/_posts/2021-10-20-只出现一次的数字.md
@@ -3,9 +3,7 @@ layout: article
 title: "只出现一次的数字"
 ---
 
-# 只出现一次的数字
-
-### 给定一个**非空**整数数组，除了某个元素只出现一次以外，其余每个元素均出现两次。找出那个只出现了一次的元素。
+### 给定一个**非空**整数数组，除了某个元素只出现一次以外，其余每个元素均出现两次。找出那个只出现了一次的元素
 
 ```c
 int singleNumber(int* nums, int numsSize)
@@ -26,5 +24,4 @@ int singleNumber(int* nums, int numsSize)
 }
 ```
 
-#### 给定一个数组要找到其中只出现了一次的元素，可以定义双指针，两个指针开始都指向下表为0的数组元素，指针i每次向右移动一位指针j便遍历一次数组找到其中是否有相同值的数组元素(除了本身)，若有则终止本次循环i向右移动一位，直到没有相同元素为止，输出只出现了一次的元素。
-
+#### 给定一个数组要找到其中只出现了一次的元素，可以定义双指针，两个指针开始都指向下表为0的数组元素，指针i每次向右移动一位指针j便遍历一次数组找到其中是否有相同值的数组元素(除了本身)，若有则终止本次循环i向右移动一位，直到没有相同元素为止，输出只出现了一次的元素
