--- a/_posts/2021-10-20-旋转数组.md
+++ b/_posts/2021-10-20-旋转数组.md
@@ -3,9 +3,7 @@ layout: article
 title: "旋转数组"
 ---
 
-# 旋转数组
-
-#### 给定一个数组，将数组中的元素向右移动 `k` 个位置，其中 `k` 是非负数。
+#### 给定一个数组，将数组中的元素向右移动 `k` 个位置，其中 `k` 是非负数
 
 ```c
 void rotate(int* nums, int numsSize, int k)
@@ -20,5 +18,4 @@ void rotate(int* nums, int numsSize, int k)
 }
 ```
 
-#### 对于给定的数组要将它进行翻转首先定义另外一个数组p，p的大小与给定数组的大小相等，通过数学规律可以发现(1+k)%numSize所得的值即为翻转后的数组所对应的下标，接下来用for循环将数组遍历赋值即可，最后输出改变后的数组。
-
+#### 对于给定的数组要将它进行翻转首先定义另外一个数组p，p的大小与给定数组的大小相等，通过数学规律可以发现(1+k)%numSize所得的值即为翻转后的数组所对应的下标，接下来用for循环将数组遍历赋值即可，最后输出改变后的数组
