--- a/_posts/2021-10-22-加一.md
+++ b/_posts/2021-10-22-加一.md
@@ -3,13 +3,11 @@ layout: article
 title: "加一"
 ---
 
-# 加一
+#### 给定一个由 整数 组成的 非空 数组所表示的非负整数，在该数的基础上加一
 
-#### 给定一个由 整数 组成的 非空 数组所表示的非负整数，在该数的基础上加一。
+#### 最高位数字存放在数组的首位， 数组中每个元素只存储单个数字
 
-#### 最高位数字存放在数组的首位， 数组中每个元素只存储单个数字。
-
-#### 你可以假设除了整数 0 之外，这个整数不会以零开头。
+#### 你可以假设除了整数 0 之外，这个整数不会以零开头
 
 ```c
 int* plusOne(int* digits, int digitsSize, int* returnSize)
@@ -58,7 +56,4 @@ int* plusOne(int* digits, int digitsSize, int* returnSize)
 }
 ```
 
-
-
-##### 要实现加一首先想到的应该是边界条件的判断，如果末位为9那加一之后就要进位，如果都是9，返回数组的位数要比原来多1，因此用calloc动态内存分配的时候多申请一位，防止数组下标越界。之后设计程序加一。
-
+##### 要实现加一首先想到的应该是边界条件的判断，如果末位为9那加一之后就要进位，如果都是9，返回数组的位数要比原来多1，因此用calloc动态内存分配的时候多申请一位，防止数组下标越界。之后设计程序加一
