--- a/_posts/2021-10-23-两数之和.md
+++ b/_posts/2021-10-23-两数之和.md
@@ -3,13 +3,11 @@ layout: article
 title: "两数之和"
 ---
 
-# 两数之和
+### 给定一个整数数组nums和一个整数目标值target，请你在该数组中找出 和为目标值  target的那两个整数，并返回它们的数组下标
 
-### 给定一个整数数组nums和一个整数目标值target，请你在该数组中找出 和为目标值 	target的那两个整数，并返回它们的数组下标。
+### 你可以假设每种输入只会对应一个答案。但是，数组中同一个元素在答案里不能重复出现
 
-### 你可以假设每种输入只会对应一个答案。但是，数组中同一个元素在答案里不能重复出现。
-
-### 你可以按任意顺序返回答案。
+### 你可以按任意顺序返回答案
 
 ```c
 int* twoSum(int* nums, int numsSize, int target, int* returnSize)
@@ -31,7 +29,4 @@ int* twoSum(int* nums, int numsSize, int target, int* returnSize)
 }
 ```
 
-#### 这道题看起来很简单用双指针法进行遍历即可但在实际编写程序的过程中还是遇到了一些问题，一开始我并没有使用动态内存分配给数组p，而是直接定义 int p[2]={0}; 然后测试程序的时候报错了，原因是函数返回的指针指向局部变量数组在函数退出时数组的储存空间会被销毁，这个时候再去访问地址就会发生问题，解决方案是分配空间和用static修饰变量。
-
- 
-
+#### 这道题看起来很简单用双指针法进行遍历即可但在实际编写程序的过程中还是遇到了一些问题，一开始我并没有使用动态内存分配给数组p，而是直接定义 int p[2]={0}; 然后测试程序的时候报错了，原因是函数返回的指针指向局部变量数组在函数退出时数组的储存空间会被销毁，这个时候再去访问地址就会发生问题，解决方案是分配空间和用static修饰变量
