--- a/_posts/2021-11-12-字符数组的使用.md
+++ b/_posts/2021-11-12-字符数组的使用.md
@@ -3,17 +3,15 @@ layout: article
 title: "字符数组的使用"
 ---
 
-# 字符数组的使用
+## C语言字符串及字符数组的相关知识
 
-## C语言字符串及字符数组的相关知识：
+​ ***字符串是一种非常重要的数据类型，但是C语言不存在显式的字符串类型，C语言中的字符串都以字符串常量的形式出现或存储在字符数组中。同时，C 语言提供了一系列库函数来对操作字符串，这些库函数都包含在头文件 string.h 中。***
 
-​	***字符串是一种非常重要的数据类型，但是C语言不存在显式的字符串类型，C语言中的字符串都以字符串常量的形式出现或存储在字符数组中。同时，C 语言提供了一系列库函数来对操作字符串，这些库函数都包含在头文件 string.h 中。***
-
-**1，什么是字符串常量**
+## 1，什么是字符串常量
 
   C 语言虽然没有字符串类型，但是 C语言提是存在字符串这个概念的，也就是字符串常量：以 NUL 字节结尾的 0 个或多个字符组成的序列。字符串常量是不可被修改的，一般用一对双引号(" ")括起的一串字符来表示字符串常量。字符串常量可以为空，如""就是一个空的字符串常量，但是即使为空，还是存在一个终止符 NUL 的。（在 C 语言中，常用转义字符 \0 来表示 NUL）。例如：“1234\0”
 
-**2，字符串常量与指针**
+## 2，字符串常量与指针
 
   字符串常量与指针关系密切，因为字符串常量的值，实际上表示的是存储这些字符的内存空间的地址，更准确地说是字符串常量中第 1 个字符的地址，而不是这些字符本身。因此，在 C 语言中是不能直接进行字符串赋值的（因为没有字符串类型嘛）。在 C 语言中，常通过声明一个指向 char 类型的指针并将其初始化为一个字符串常量的方式来访问一个字符串：
 
@@ -22,65 +20,59 @@ title: "字符数组的使用"
 | **p[0]='1'** | **p[1]='2'** | **p[2]='3'** | **p[3]='4'** | **p[4]='\0'** |
 | ------------ | ------------ | ------------ | ------------ | ------------- |
 
-**3，字符数组**
+## 3，字符数组
 
   用于存放字符的数组称为字符数组。在 C 语言中，除了字符串常量外，其他所有字符串都必须存储于字符数组或动态分配的内存中。定义一个字符数组和定义一个普通数组一样，不同的是字符数组中存放的是字符数据而已。
 
-**4，字符串常量与字符数组的区别**
+## 4，字符串常量与字符数组的区别
 
 1）字符串常量是一个字符数组，但是内容和长度在初始化时就已经固定了，不可更改；可以通过一个指向字符串常量第一个元素的指针来访问该字符串常量；
 
 2）字符数组是一个用于存放字符的数组，字符数组的值是可以更改的。
 
-**在了解了这些基础知识后我们进入正题**
+在了解了这些基础知识后我们进入正题
 
 大家可以看下我接下来贴出来的代码
 
-![](https://i.bmp.ovh/imgs/2021/11/8ecaa6dd78bd0c37.png)
+![error](https://i.bmp.ovh/imgs/2021/11/8ecaa6dd78bd0c37.png)
 
 大家觉得这样存放**'\*'**的方式有问题吗？我们接下来运行一下程序看看结果
 
-![](https://i.bmp.ovh/imgs/2021/11/a2dd3b2b109b1832.png)
+![error](https://i.bmp.ovh/imgs/2021/11/a2dd3b2b109b1832.png)
 
 有些项打印出了乱码，我们接下来改一下程序
 
-![](https://i.bmp.ovh/imgs/2021/11/285c59466478daf1.png)
+![error](https://i.bmp.ovh/imgs/2021/11/285c59466478daf1.png)
 
 这样我们再运行一下代码
 
-![](https://i.bmp.ovh/imgs/2021/11/7625ea8153f6a691.png)
+![error](https://i.bmp.ovh/imgs/2021/11/7625ea8153f6a691.png)
 
 可以发现程序没有任何问题，大家是否看出来了这两个代码的区别：**count[ii]与count[ii]+1**,区别在于后面的代码字符数组比之前多一位且存放的是‘\0’，'\0'代表着字符串的结束如果没有它的话printf函数会一直向后打印数据，直到遇到'\0'才停止。
 
 这样还不是最致命的，不正确的字符数组使用甚至会导致程序的崩溃，例如：大家看以下代码，在问题3中我用以下代码储存四位不同的数和输入的数并进行处理
 
-![](https://i.bmp.ovh/imgs/2021/11/2560a1282276e2d5.png)
+![error](https://i.bmp.ovh/imgs/2021/11/2560a1282276e2d5.png)
 
-
-
-![](https://i.bmp.ovh/imgs/2021/11/1810e3a5e07e433a.png)
+![error](https://i.bmp.ovh/imgs/2021/11/1810e3a5e07e433a.png)
 
 大家看这段代码是否有问题，以下是运行结果
 
-![](https://i.bmp.ovh/imgs/2021/11/e2eec108596d9aa3.png)
+![error](https://i.bmp.ovh/imgs/2021/11/e2eec108596d9aa3.png)
 
-
-
-![](https://i.bmp.ovh/imgs/2021/11/24b7e2134e86bab5.png)
+![error](https://i.bmp.ovh/imgs/2021/11/24b7e2134e86bab5.png)
 
 程序运行到最后一行出现了错误，是不是非常奇怪，程序都运行完了但是结束不了，而且电脑控制台窗口卡死，这是为什么呢？我们来翻译一下这个错误信息
 
-![](https://i.bmp.ovh/imgs/2021/11/20f2754cd8337431.png)
+![error](https://i.bmp.ovh/imgs/2021/11/20f2754cd8337431.png)
 
 没错极其严重的错误内存被破坏了，那我们改动一下代码
 
-![](https://i.bmp.ovh/imgs/2021/11/ec458664adf0590e.png)
+![error](https://i.bmp.ovh/imgs/2021/11/ec458664adf0590e.png)
 
 来运行一下
 
-![](https://obohe.com/i/2021/11/12/ki9ypo.png)
-
-
+![error](https://obohe.com/i/2021/11/12/ki9ypo.png)
 
 程序正常运行，没有发生断点，程序没有崩溃，那么这次和之前的区别在哪呢，**[4]与[5]的区别后面的代码比前面的多了一位且此位为'\0'**。
 
@@ -88,28 +80,27 @@ title: "字符数组的使用"
 
   不知道有些同学看到这里有没有疑问，你的四位不同的数是如何产生并用字符数组储存的呢？那么请大家看以下代码
 
-![](https://obohe.com/i/2021/11/12/kj2au4.png)
+![error](https://obohe.com/i/2021/11/12/kj2au4.png)
 
 大家觉得这样行吗？我们运行一下
 
-![](https://obohe.com/i/2021/11/12/kjo1ng.png)
+![error](https://obohe.com/i/2021/11/12/kjo1ng.png)
 
 很奇怪啊，怎么都是0呢，不急我们调试一下
 
-![](https://obohe.com/i/2021/11/12/kk4yq6.png)
+![error](https://obohe.com/i/2021/11/12/kk4yq6.png)
 
 这是这个随机数的字符数组中的东西，有问题吗？这不是值都不一样吗？也是四位啊，没错值是一样但是不知道大家是否还记得ASCII码这种东西，先不管这么多，我们改一下代码
 
-![](https://obohe.com/i/2021/11/12/kkbouo.png)
+![error](https://obohe.com/i/2021/11/12/kkbouo.png)
 
 这次我们改了一下代码大家看看区别，我们运行一下
 
-![](https://obohe.com/i/2021/11/12/kkr4ip.png)
+![error](https://obohe.com/i/2021/11/12/kkr4ip.png)
 
 运行成功了这里的区别在于是否在随机数后加**'0'我们加的是什么呢，其实是'0'这个字符的ASCII码值，我们来调试一下
 **
 
-![](https://obohe.com/i/2021/11/12/kl8to9.png)
+![error](https://obohe.com/i/2021/11/12/kl8to9.png)
 
 现在大家应该明白了，以后可不能忽略ASCII码这种东西，它对字符的处理可是至关重要，大家想了解更多字符处理的相关技巧可以搜索一下，我今天就先介绍到这里。希望对大家有帮助。
-
