--- a/_posts/2021-11-5-罗马数字转整数.md
+++ b/_posts/2021-11-5-罗马数字转整数.md
@@ -3,11 +3,7 @@ layout: article
 title: "罗马数字转整数"
 ---
 
-
-
-### 罗马数字转整数
-
-#### 罗马数字包含以下七种字符: I， V， X， L，C，D 和 M。
+#### 罗马数字包含以下七种字符: I， V， X， L，C，D 和 M
 
 字符          数值
 I             1
@@ -22,7 +18,7 @@ M             1000
 通常情况下，罗马数字中小的数字在大的数字的右边。但也存在特例，例如 4 不写做 IIII，而是 IV。数字 1 在数字 5 的左边，所表示的数等于大数 5 减小数 1 得到的数值 4 。同样地，数字 9 表示为 IX。这个特殊的规则只适用于以下六种情况：
 
 I 可以放在 V (5) 和 X (10) 的左边，来表示 4 和 9。
-X 可以放在 L (50) 和 C (100) 的左边，来表示 40 和 90。 
+X 可以放在 L (50) 和 C (100) 的左边，来表示 40 和 90。
 C 可以放在 D (500) 和 M (1000) 的左边，来表示 400 和 900。
 给定一个罗马数字，将其转换成整数。输入确保在 1 到 3999 的范围内。
 
@@ -108,5 +104,4 @@ int romanToInt(char* s)
 }
 ```
 
-#### 在写这道题的时候我的想法是一个一个的扫描字符数组中的字符符合题目条件就给返回值加上相应的值但在这个过程中犯了一个错误，在统计字符个数的时候一开始我用的是sizeof(s)/sizeof(char)没有发现传到函数中来的是指针，这个时候该表达式算出来的值始终为4所以在进行程序时发生数组下标越界，因此只能使用strlen函数或者是用循环来统计字符个数。
-
+#### 在写这道题的时候我的想法是一个一个的扫描字符数组中的字符符合题目条件就给返回值加上相应的值但在这个过程中犯了一个错误，在统计字符个数的时候一开始我用的是sizeof(s)/sizeof(char)没有发现传到函数中来的是指针，这个时候该表达式算出来的值始终为4所以在进行程序时发生数组下标越界，因此只能使用strlen函数或者是用循环来统计字符个数
