--- a/_posts/2021-10-20-清空缓冲区的方法.md
+++ b/_posts/2021-10-20-清空缓冲区的方法.md
@@ -3,9 +3,7 @@ layout: article
 title: "清空缓冲区的方法"
 ---
 
-# 清空缓冲区的方法
-
-**方法1：**
+## 方法1
 
 **使用** **fflush(stdin)**
 
@@ -21,9 +19,9 @@ fflush(stdin)
 
 **如果编译器不支持，它并不会报错，只是执行完这条语句后，缓冲区的内容依然存在。**
 
-**方法2**
+## 方法2
 
-**使用getchar（）**
+使用getchar（）
 
 **getchar() 是带有缓冲区的，每次从缓冲区中读取一个字符，包括空格、制表符、换行符等空白符，只要我们让 getchar() 不停地读取，直到读完缓冲区中的所有字符，就能达到清空缓冲区的效果。请看下面的代码：**
 
@@ -35,11 +33,11 @@ while((c = getchar()) != '\n' && c != EOF);
 
 **该代码不停地使用 getchar() 获取缓冲区中的字符，直到遇见换行符\n或者到达文件结尾才停止。**
 
-**当知道需要清除的字符个数时也可如之前所示直接使用getchar（）**
+当知道需要清除的字符个数时也可如之前所示直接使用getchar（）
 
-**方法3**
+## 方法3
 
-**使用scanf()清空**
+使用scanf()清空
 
 **scanf() 还有一种高级用法，就是使用类似于正则表达式的通配符，这样它就可以读取所有的字符了，包括空格、换行符、制表符等空白符，不会再忽略它们了。并且，scanf() 还允许把读取到的数据直接丢弃，不用赋值给变量。**
 
