--- a/_posts/2022-11-19-surface双系统.md
+++ b/_posts/2022-11-19-surface双系统.md
@@ -9,7 +9,11 @@ title : "surface双系统"
 
 ## 第一步
 
-从fydeos官网进入找到[fydeos for you](https://fydeos.com/download/you#microsoft)找到适合你电脑的型号下载相应的安装文件，该文件后缀为.xz，需要使用官方推荐的工具 [balenaEtcher](https://www.balena.io/etcher/)将该文件烧录至U盘内。
+从fydeos官网进入找到
+**[fydeos for you](https://fydeos.com/download/you#microsoft)**
+找到适合你电脑的型号下载相应的安装文件，该文件后缀为.xz，需要使用官方推荐的工具
+**[balenaEtcher](https://www.balena.io/etcher/)**
+将该文件烧录至U盘内。
 
 ## 第二步
 
