--- a/_posts/2022-11-24-使用github仓库作为图床.md
+++ b/_posts/2022-11-24-使用github仓库作为图床.md
@@ -9,7 +9,7 @@ title : "使用github仓库作为图床"
 
 连接github的工具推荐：
 **[Steam++](https://github.com/BeyondDimension/SteamTools/releases)**，
-**[fastgithub](链接：https://pan.baidu.com/s/1NPmiqwdI9cv-wwOaUrhwqQ?pwd=5a6e)**。
+**[fastgithub](https://pan.baidu.com/s/1NPmiqwdI9cv-wwOaUrhwqQ?pwd=5a6e)**。
 
 PicGo下载：
 **[PicGo](https://picgo.github.io/PicGo-Doc/zh/guide/#picgo-is-here)**
