--- a/_posts/2022-11-26-maven环境变量配置.md
+++ b/_posts/2022-11-26-maven环境变量配置.md
@@ -11,7 +11,7 @@ title : "maven环境变量配置"
 
 * 2，在搜索栏搜索环境变量，找到系统变量新建一个系统变量为
 **MAVEN_HOME**
-其值为jdk所在文件夹内的文件属性中的路径,同时在系统变量的Path中加入
+其值为jdk所在文件夹内的文件属性中的路径(绝对路径),同时在系统变量的Path中加入
 **%MAVEN_HOME%\bin**
 
 * 3，完成后在控制台输入`mvn -v`若输出如下图所示则成功
