--- a/_posts/2022-11-27-在vscode中为不同语言配置编码格式.md
+++ b/_posts/2022-11-27-在vscode中为不同语言配置编码格式.md
@@ -55,4 +55,4 @@ title : "在vscode中为不同语言配置编码格式"
     ```
 
     加入这几段代码后实现的效果是，让
-    **C/C++语言默认编码设置为gbk ;java，python，markdown默认编码为utf-8** 以后需要加入其他的自定义编码也以此格式添加即可
+    **C/C++语言默认编码设置为gbk ;java，python，markdown默认编码为utf-8** 以后需要加入其他的自定义编码也以此格式添加
