--- a/_posts/2023-1-12-手柄映射工具.md
+++ b/_posts/2023-1-12-手柄映射工具.md
@@ -5,4 +5,4 @@ title : "手柄映射工具"
 
 ### 下载地址
 
-**[xpadder](https://pan.baidu.com/s/1aBrQrugUOQnm7uSomVnK6Q?pwd=xvuv)**
+**[xpadder](https://pan.baidu.com/s/1mNV91rEnlYLyo3kjBPfrnw?pwd=6gxf)**
