--- a/_posts/2023-1-12-手柄映射工具.md
+++ b/_posts/2023-1-12-手柄映射工具.md
@@ -6,3 +6,5 @@ title : "手柄映射工具"
 ### 下载地址
 
 **[xpadder](https://pan.baidu.com/s/1mNV91rEnlYLyo3kjBPfrnw?pwd=6gxf)**
+
+**[HandheldCompanion](https://github.com/Valkirie/HandheldCompanion/releases/tag/0.14.2.0)**
