--- a/_posts/2022-10-20-mklink命令的使用.md
+++ b/_posts/2022-10-20-mklink命令的使用.md
@@ -24,3 +24,9 @@ ps:需要先将要迁移的目标文件转移至目标目录再执行命令
 命令：`mklink /D "C:\Users\{username}\.vscode\extensions" "D:\VsCodeExtensions"`
 
 执行命令后C盘的extensions文件夹将变成一个快捷方式，点击将直接跳转至D盘的VsCodeExtensions中
+
+#### 3，不会弄的直接下载下面的压缩包
+
+解压后右键管理员运行.bat文件按照提示输入路径即可
+
+**[mklink](https://pan.baidu.com/s/1worv_XMoCHuq6fECmwE0Iw?pwd=jc3k)**
