--- a/_posts/2022-10-20-mklink命令的使用.md
+++ b/_posts/2022-10-20-mklink命令的使用.md
@@ -29,4 +29,22 @@ ps:需要先将要迁移的目标文件转移至目标目录再执行命令
 
 解压后右键管理员运行.bat文件按照提示输入路径即可
 
-**[mklink](https://pan.baidu.com/s/1worv_XMoCHuq6fECmwE0Iw?pwd=jc3k)**
+**[mklink](https://pan.baidu.com/s/1bLqF_g6fTufQodRAzYGenQ?pwd=eqrn)**
+
+源代码如下：
+
+```cmd
+@echo off
+echo "请输入需要移动的文件/文件夹的绝对路径"
+set /P source=
+echo "请输入转移目标位置的绝对路径"
+set /P target=
+cd %source%
+xcopy * %target% /H /E /Y
+for %%I in (%source%) do set temp=%%~nI
+cd ..
+rd/s/q %temp%
+mklink /D "%source%" "%target%"
+pause
+@REM 作者BugLeesir
+```
