update by bugleesir

--- a/_posts/2023-9-23-使用Rasa构建中文对话机器人.md
+++ b/_posts/2023-9-23-使用Rasa构建中文对话机器人.md
@@ -8,3 +8,24 @@ title : "使用Rasa构建中文对话机器人"
 起初是在学校里从老师手上接到了一个项目，项目的内容就是使用Rasa框架构建一个中文对话机器人，开始的时候还觉得挺简单的，但是在真正开始着手做的时候却发现其实有一大堆问题有待解决，在国内使用Rasa框架的人还是太少了，以至于我们在网上也找不到适合的资料，最后只能啃官方英文文档和去看官方教程，所以本教程旨在提供一些Rasa项目开发的经验以及供自己后来查阅。
 
 ### Part1---Rasa简介
+
+Rasa是一个开源的自然语言处理（NLP）框架，专注于构建和部署任务型对话系统（Task-Oriented Chatbots）和智能助手。它提供了一套工具和库，使开发者能够轻松地创建自定义的、多轮对话的NLP应用程序。
+
+**[Rasa官网](https://rasa.com/)**
+
+**[Rasa Open Source 使用文档](https://rasa.com/docs/rasa/)**
+
+### Part2---Rasa部署教程
+
+下面是我在完成学校项目时采取的部署方案，主要是在PC上部署
+
+#### 1、下载Python 3.10 版本
+
+可以去
+**[Python](https://www.python.org/)**
+官网下载或者去微软商店下载
+
+#### 2、下载Anaconda---Python包管理工具
+
+**[Anaconda](https://www.anaconda.com/)**
+官网
