update by bugleesir

--- a/_posts/2022-11-24-使用github仓库作为图床.md
+++ b/_posts/2022-11-24-使用github仓库作为图床.md
@@ -36,3 +36,7 @@ PicGo下载：
 ![error](https://raw.githubusercontent.com/BugLeesir/image_host01/main/blogs_img/%E5%B1%8F%E5%B9%95%E6%88%AA%E5%9B%BE%202022-11-24%20233849.png)
 
 如此以github仓库配置图床就完成了
+
+### 第四步
+
+科学上网上传图片
