update by bugleesir

--- a/_posts/2024-1-10-git命令速查.md
+++ b/_posts/2024-1-10-git命令速查.md
@@ -69,7 +69,8 @@ git remote add origin <git@github.com>:daixu/WebApp.git
 
 ## 二、 Git 命令速查表
 
-1、常用的Git命令  
+### 1、常用的Git命令  
+
 git add  
 添加至暂存区  
 git add–interactive  
@@ -165,7 +166,8 @@ git status
 git tag  
 里程碑管理
 
-2、对象库操作相关命令  
+### 2、对象库操作相关命令
+
 命令  
 简要说明  
 git commit-tree  
@@ -189,7 +191,8 @@ git unpack-file
 git write-tree  
 从暂存区创建一个树对象
 
-3、引用操作相关命令  
+### 3、引用操作相关命令
+
 命令  
 简要说明  
 git check-ref-format  
@@ -215,7 +218,8 @@ git update-ref
 git verify-tag  
 校验 GPG 签名的Tag
 
-4、版本库管理相关命令  
+### 4、版本库管理相关命令
+
 命令  
 简要说明  
 git count-objects  
@@ -253,7 +257,8 @@ git unpack-objects
 git verify-pack  
 校验对象库打包文件
 
-5、数据传输相关命令  
+### 5、数据传输相关命令
+
 命令  
 简要说明  
 git fetch-pack  
@@ -267,7 +272,8 @@ git upload-archive
 git upload-pack  
 执行 git fetch 或 git pull 命令时在远程执行此命令，将对象打包、上传
 
-6、邮件相关命令  
+### 6、邮件相关命令
+
 命令  
 简要说明  
 git imap-send  
@@ -281,7 +287,8 @@ git request-pull
 git send-email  
 发送邮件
 
-7、协议相关命令  
+### 7、协议相关命令  
+
 命令  
 简要说明  
 git daemon  
@@ -313,7 +320,8 @@ git remote-https
 git remote-testgit  
 协议扩展示例脚本
 
-8、版本库转换和交互相关命令  
+### 8、版本库转换和交互相关命令  
+
 命令  
 简要说明  
 git archimport  
@@ -333,7 +341,8 @@ git fast-import
 git svn  
 Git 作为前端操作 Subversion
 
-9、合并相关的辅助命令  
+### 9、合并相关的辅助命令
+
 命令  
 简要说明  
 git merge-base  
@@ -361,7 +370,8 @@ git fmt-merge-msg
 git rerere  
 重用所记录的冲突解决方案
 
-10、 杂项  
+### 10、 杂项
+  
 命令  
 简要说明  
 git bisect–helper  
