--- a/_posts/2024-1-10-git命令速查.md
+++ b/_posts/2024-1-10-git命令速查.md
@@ -2,6 +2,20 @@
 layout : article
 title : "git命令速查"
 ---
+
+- [一、 Git常用命令](#一-git常用命令)
+- [二、 Git 命令速查表](#二-git-命令速查表)
+  - [1、常用的Git命令](#1常用的git命令)
+  - [2、对象库操作相关命令](#2对象库操作相关命令)
+  - [3、引用操作相关命令](#3引用操作相关命令)
+  - [4、版本库管理相关命令](#4版本库管理相关命令)
+  - [5、数据传输相关命令](#5数据传输相关命令)
+  - [6、邮件相关命令](#6邮件相关命令)
+  - [7、协议相关命令](#7协议相关命令)
+  - [8、版本库转换和交互相关命令](#8版本库转换和交互相关命令)
+  - [9、合并相关的辅助命令](#9合并相关的辅助命令)
+  - [10、 杂项](#10-杂项)
+
 ## 一、 Git常用命令
 
 git branch 查看本地所有分支  
