--- a/_posts/2024-1-15-前端设计文档.md
+++ b/_posts/2024-1-15-前端设计文档.md
@@ -3,6 +3,22 @@ layout : article
 title : "前端设计文档"
 ---
 
+- [前端设计文档](#前端设计文档)
+- [1 项目代码结构](#1-项目代码结构)
+- [2 公共组件设计](#2-公共组件设计)
+  - [2.1 组件抽取基本思路](#21-组件抽取基本思路)
+  - [2.2 组件 Navbar.vue](#22-组件-navbarvue)
+  - [2.3 组件 Sidebar.vue](#23-组件-sidebarvue)
+  - [2.4 组件 Breadcrumb](#24-组件-breadcrumb)
+  - [2.4 组件 Hamburger.vue](#24-组件-hamburgervue)
+- [3 业务界面设计](#3-业务界面设计)
+  - [3.1 登录设计](#31-登录设计)
+  - [3.2 主界面设计](#32-主界面设计)
+  - [3.3 子系统界面设计](#33-子系统界面设计)
+  - [3.4 资源管理界面设计](#34-资源管理界面设计)
+  - [3.5 角色管理界面设计](#35-角色管理界面设计)
+  - [3.6 用户管理界面设计](#36-用户管理界面设计)
+
 ## 前端设计文档
 
 ## 1 项目代码结构
