--- a/_posts/2024-1-10-git命令速查.md
+++ b/_posts/2024-1-10-git命令速查.md
@@ -73,7 +73,7 @@ git branch -m branch\_0.1 branch\_1.0 将branch\_0.1重命名为branch\_1.0
 git checkout branch\_1.0/master 切换到branch\_1.0/master分支  
 du -hs  
 git branch 删除远程branch  
-git push origin :branch\_remote\_name  
+git push origin -d branch\_remote\_name  
 git branch -r -d branch\_remote\_name  
 git init 本地初始化  
 touch README  
