fix by bugleesir

--- a/_posts/2024-1-10-git命令速查.md
+++ b/_posts/2024-1-10-git命令速查.md
@@ -72,8 +72,8 @@ git branch branch\_0.1 master 从主分支master创建branch\_0.1分支
 git branch -m branch\_0.1 branch\_1.0 将branch\_0.1重命名为branch\_1.0  
 git checkout branch\_1.0/master 切换到branch\_1.0/master分支  
 du -hs  
-git branch 删除远程branch  
-git push origin -d branch\_remote\_name  
+git branch  
+git push origin -d branch\_remote\_name  删除远程分支
 git branch -r -d branch\_remote\_name  
 git init 本地初始化  
 touch README  
