--- a/_posts/2024-1-10-git命令速查.md
+++ b/_posts/2024-1-10-git命令速查.md
@@ -74,7 +74,7 @@ git checkout branch\_1.0/master 切换到branch\_1.0/master分支
 du -hs  
 git branch -d  branch\_name 删除本地分支
 
-git push origin -d branch\_remote\_name  删除远程分支
+git push origin -d branch\_name  删除远程分支
 
 git init 本地初始化  
 touch README  
