update by bugleesir

--- a/_posts/2024-3-18-IDEA快捷键大全.md
+++ b/_posts/2024-3-18-IDEA快捷键大全.md
@@ -3,6 +3,19 @@ layout : article
 title : "IDEA快捷键大全"
 ---
 
+<!-- TOC -->
+
+- [Ctrl](#ctrl)
+- [Alt](#alt)
+- [Shift](#shift)
+- [Ctrl + Alt](#ctrl--alt)
+- [Ctrl + Shift](#ctrl--shift)
+- [Alt + Shift](#alt--shift)
+- [Ctrl + Shift + Alt](#ctrl--shift--alt)
+- [其他](#其他)
+
+<!-- /TOC -->
+
 ### Ctrl
 
 | 快捷键 | 介绍 |
